fixed issue with timeline animation on mobile and animated presentation once

--- a/src/App.css
+++ b/src/App.css
@@ -106,25 +106,31 @@ h2 {
 
 .welcome{
   opacity: 0;
-  transition: opacity 0.8s;
+  transition: all 0.8s;
+  margin: 0 0 -500px 0;
 }
 
-.welcome.is-visible{
+.welcome.animate-once{
+  margin: 0;
   opacity: 1;
   color: rgba(255, 255, 255, 1);
 }
 
 .description {
   opacity: 0;
-  transition: opacity 1.1s;
+  transition: all 1.1s;
 }
 
-.description.is-visible {
+.description.animate-once {
+  /* word-wrap: none; */
   opacity: 1;
+  margin-bottom: 0;
+  /* margin: 0 0 0 -500px; */
   color: rgba(255, 255, 255, 1);
 }
 
 .section-1 {
+    align-items: flex-start;
     height: 70vh;
     min-height: 80%;
     background: linear-gradient(180deg, rgb(96, 108, 136) 0%, rgb(63, 76, 107) 100%);
@@ -132,7 +138,7 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     z-index: 0;
 }
 /* 
@@ -173,11 +179,14 @@ h2 {
 
 .presentation {
   /* display:flex; */
-  /* padding-top: 100px; */
+  padding-top: 100px;
+  
   flex-basis: 100%;
 }
 .section-1-media-links {
   flex-basis: 100%;
+  top:55%;
+  position: absolute;
   z-index: 2;
 }
 
@@ -284,6 +293,7 @@ h2 {
 .inner-container.animate {
   opacity: 1;
 }
+
 
 .inner-box-skill {
   display: flex;
@@ -434,6 +444,28 @@ h2 {
   .inner-box-progress-bar {
     display: flex;
     flex: 3;
+  }
+}
+
+/* Mobile timeline animation fix */
+
+@media only screen and (max-width: 1169px) {
+  .vertical-timeline--animate  .vertical-timeline-element-content.bounce-in {
+    visibility: visible;
+    animation: timeline-slide 0.6s;
+  }
+}
+
+@keyframes timeline-slide {
+  0% {
+    opacity: 0;
+  }
+
+  60% {
+  }
+
+  100% {
+    opacity: 1;
   }
 }
 
